--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 A small library of mathematical tools written in various languages. 
 
-List of existing files:
+List of existing files by topic:
 
 Numerical Analysis
 - bisect.c
