--- a/README
+++ b/README
@@ -5,3 +5,4 @@ List of existing files by topic:
 Numerical Analysis
 - bisect.c
     - C implementation of the Bisection Method for finding the root of a polynomial.
+    - TODO : doesn't handle negative roots yet.
