update README to include Python

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-﻿A collection of mathematical tools in various languages (so far just plain C)
+﻿A collection of mathematical tools in various languages
+    - C
+    - Python
