--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-﻿A collection of mathematical tools in various languages
+Some mathematical tools in various languages from uni
     - C
     - Python
+    - Matlab
